# masters-thesis-project

./: .env.example  Dockerfile  README.md  convo.yaml  docker-compose.yml  pyproject.toml
data/: composition.xlsx  contraindications.xlsx
master_thesis_project/: project.ipynb
