[tool.poetry]
name = "master-thesis-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
langchain-experimental = "^0.3.3"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
